[package]
name = "PyJsRuntime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "PyJsRuntime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["attributes", "tokio-runtime"] }
deno_core = "0.334.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
parking_lot = "0.12.3"
