[package]
name = "py_js_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_js_runtime"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["attributes", "tokio-runtime"] }
deno_core = "0.334.0"
deno_node = "0.131.0"
deno_npm = "0.27.0"
node_resolver = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "sync"] }
futures = "0.3"
parking_lot = "0.12.3"
serde_json = "1.0"
anyhow = "1.0"